--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 keywords = ["crypto", "rsa", "blind", "signatures"]
 homepage = "https://github.com/jedisct1/rust-blind-rsa-signatures"
 repository = "https://github.com/jedisct1/rust-blind-rsa-signatures"
-categories = ["no-std", "cryptography"]
+categories = ["cryptography"]
 license = "MIT"
 
 [dependencies]
