--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,4 +16,6 @@ rand = "0.7"
 rsa = { version = "0.3", features = ["expose-internals"] }
 digest = "0.9"
 hmac-sha512 = { version = "0.1", features = ["traits", "sha384"] }
+derive-new = "0.5"
+shrinkwraprs = "0.3"
 
