--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ license = "MIT"
 [dependencies]
 rand = "0.7"
 rsa = { version = "0.3", features = ["expose-internals"] }
+rsa-export = "0.3"
 digest = "0.9"
 hmac-sha512 = { version = "0.1", features = ["traits", "sha384"] }
 derive-new = "0.5"
