--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ license = "MIT"
 rand = "0.8.3"
 rsa = { version = "0.4.0", features = ["expose-internals"] }
 digest = "0.9"
+hmac-sha256 = { version = "0.1", features = ["traits"] }
 hmac-sha512 = { version = "0.1", features = ["traits", "sha384"] }
 derive-new = "0.5"
 derive_more = "0.99"
