--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,8 +14,8 @@ license = "MIT"
 [dependencies]
 rand = "0.8"
 rsa = { version = "0.5", features = ["expose-internals"] }
-digest = "0.9"
-hmac-sha256 = { version = "0.1", features = ["traits"] }
-hmac-sha512 = { version = "0.1", features = ["traits", "sha384"] }
+digest = "~0.9"
+hmac-sha256 = { version = "1.1.1", features = ["traits09"] }
+hmac-sha512 = { version = "1.1.1", features = ["traits09", "sha384"] }
 derive-new = "0.5"
 derive_more = "0.99"
