--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ categories = ["cryptography"]
 license = "MIT"
 
 [dependencies]
+num-integer = "0.1.45"
+num-traits = "0.2.15"
 rand = "0.8.5"
 rsa = { version = "0.8.1", features = ["expose-internals"] }
 digest = "0.10.6"
