--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ hmac-sha256 = { version = "1.1.7", features = ["traits010"] }
 hmac-sha512 = { version = "1.1.5", features = ["traits010", "sha384"] }
 hkdf = "0.12.3"
 hmac = "0.12"
+hex = "0.4"
 derive-new = "0.5.9"
 derive_more = "0.99.17"
 serde = {version = "1", features = ["derive"], optional = true }
