--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,10 +17,10 @@ num-traits = "0.2.19"
 rand = "0.8.5"
 rsa = { version = "0.8.2", features = ["expose-internals"] }
 digest = "0.10.7"
-hmac-sha256 = { version = "1.1.7", features = ["traits010"] }
-hmac-sha512 = { version = "1.1.5", features = ["traits010", "sha384"] }
-derive-new = "0.5.9"
-derive_more = "0.99.17"
+hmac-sha256 = { version = "1.1.8", features = ["traits010"] }
+hmac-sha512 = { version = "1.1.6", features = ["traits010", "sha384"] }
+derive-new = "0.7.0"
+derive_more = { version = "2.0.1", features = ["full"] }
 serde = {version = "1", features = ["derive"], optional = true }
 
 [dev-dependencies]
