--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,19 +12,18 @@ categories = ["cryptography"]
 license = "MIT"
 
 [dependencies]
-num-integer = "0.1.46"
-num-traits = "0.2.19"
-rand = "0.9.2"
-rsa = { version = "0.9.9", features = ["hazmat"] }
-digest = "0.10.7"
-hmac-sha256 = { version = "1.1.12", features = ["traits010"] }
-hmac-sha512 = { version = "1.1.7", features = ["traits010", "sha384"] }
+rand = "0.10.0-rc.7"
+rsa = { version = "0.10.0-rc.13", features = ["hazmat"] }
+crypto-bigint = "0.7.0-rc.21"
+digest = "0.11.0-rc.7"
+hmac-sha256 = { version = "1.1.13", features = ["traits011"] }
+hmac-sha512 = { version = "1.1.8", features = ["traits011", "sha384"] }
 derive-new = "0.7.0"
-derive_more = { version = "2.0.1", features = ["full"] }
+derive_more = { version = "2.1.1", features = ["full"] }
 serde = { version = "1", features = ["derive"], optional = true }
 
 [dev-dependencies]
-criterion = "0.7"
+criterion = "0.8.1"
 
 [features]
 default = ["serde"]
