--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,20 +12,20 @@ categories = ["cryptography"]
 license = "MIT"
 
 [dependencies]
-rand = "0.10.0-rc.8"
-rand_core = "=0.10.0-rc-6"
-rsa = { version = "0.10.0-rc.14", features = ["hazmat"] }
-crypto-bigint = "0.7.0-rc.22"
-digest = "0.11.0-rc.9"
+rand = "0.10.0"
+rand_core = "0.10.0"
+rsa = { version = "0.10.0-rc.15", features = ["hazmat"] }
+crypto-bigint = "0.7.0-rc.27"
+digest = "0.11.0"
 hmac-sha256 = { version = "1.1.13", features = ["traits011"] }
-hmac-sha512 = { version = "1.1.10", features = ["traits011", "sha384"] }
+hmac-sha512 = { version = "1.1.11", features = ["traits011", "sha384"] }
 ct-codecs = "1"
 derive-new = "0.7.0"
 derive_more = { version = "2.1.1", features = ["full"] }
 serde = { version = "1", features = ["derive"], optional = true }
 
 [dev-dependencies]
-criterion = "0.8.1"
+criterion = "0.8.2"
 serde_json = "1"
 
 [features]
